testing/Travis/testcases/prototype/shouldFail/ParserOrTypecheckFailures/SingleRoot.adl
CONTEXT SingleRoot IN ENGLISH
{-
To enable the use of tables, each typology should have a single root element (the most generic concept). 
If there is none, it is feasable to have & create one automatically. However, then a name must be choosen. 
We have decided to have the modeller choose a name for such a largest concept, by adding CLASSIFY statements.
-}

-- Also see issue https://github.com/AmpersandTarski/ampersand/issues/292
CLASSIFY A ISA B
CLASSIFY A ISA C


ENDCONTEXT